--- a/soulme-account/src/main/resources/application.properties
+++ b/soulme-account/src/main/resources/application.properties
@@ -6,9 +6,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/soulme
 spring.datasource.username=soulmeaccount
 spring.datasource.password=A@@0un1P!
-spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
 # Service Discovery 
-eureka.client.enabled=false
+eureka.client.serviceUrl.defaultZone:http://localhost:8761/eureka/
 eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
